feat(s3): add s3 support

--- a/example.env
+++ b/example.env
@@ -11,3 +11,14 @@ SUPPORT_URL_ENCODED="true"
 SPARQL_ENDPOINT_URL="" # Required!
 SPARQL_USERNAME=""
 SPARQL_PASSWORD=""
+
+# S3 configuration
+S3_ENABLED="true"
+S3_LAST_TIMESTAMP_KEY="last_timestamp.txt"
+S3_ACCESS_KEY_ID="admin"
+S3_SECRET_ACCESS_KEY="thisisasecret"
+S3_REGION="default"
+S3_ENDPOINT="http://localhost:9000"
+S3_SSL_ENABLED="false"
+S3_FORCE_PATH_STYLE="true"
+S3_BUCKET="default"
