feat: simple date workaround using S3

--- a/example.env
+++ b/example.env
@@ -15,6 +15,7 @@ SPARQL_PASSWORD=""
 # S3 configuration
 S3_ENABLED="true"
 S3_LAST_TIMESTAMP_KEY="last_timestamp.txt"
+S3_SIMPLE_DATE_WORKAROUND_KEY="simple_date_workaround.txt"
 S3_ACCESS_KEY_ID="admin"
 S3_SECRET_ACCESS_KEY="thisisasecret"
 S3_REGION="default"
